# assist_test

./: .gitignore  README.md
backend/: benchmark_tps.py  main.py  pyproject.toml  test_integration.py
backend/agent/: code_agent_engine.py
backend/agent/sandbox/: sandbox_tool.py  uv_env.py
backend/api/: ollama_client.py
backend/cache/: semantic.py
backend/rag/: pipeline.py
backend/rag/database/: graph_db.py  job_queue.py  lancedb_manager.py
backend/rag/extractor/: graph_extractor.py
backend/rag/parser/: doc_parser.py
backend/security/: file_validator.py  guardrail.py  thread_lock.py
docs/: blueprint.md  design_and_layout_plan.md  infrastructure_architecture.md  system_design_and_plan.md  workflow.md
docs/reports/: 00_architecture_review_and_optimization.md  01_advanced_research_and_proposals.md  02_project_management_plan.md  03_pre_phase_requirements.md  04_cpu_only_downgrade_research.md  05_pm_comprehensive_review.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
