[project]
name = "on-device-agent-backend"
version = "0.1.0"
description = "온디바이스 LLM 및 다중 에이전트(Code-Agent) 백엔드 파이프라인 엔진"
authors = [
    { name = "Project Maintainer", email = "admin@local.host" }
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "loguru>=0.7.2",
    # 에이전트 및 RAG 코어
    "langchain>=0.2.6",
    "langgraph>=0.1.5",
    "smolagents>=1.0.0",
    # Vector DB 및 임베딩
    "lancedb>=0.8.2",
    "sentence-transformers>=3.0.1",
    # 보안 인터셉터
    "transformers>=4.42.0",
    "onnxruntime>=1.18.0"
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
